Fix spacing on edit profile form

--- a/app/stylesheets/builtin-pages/profile.less
+++ b/app/stylesheets/builtin-pages/profile.less
@@ -76,6 +76,7 @@
 
   form.edit-profile {
     max-width: 365px;
+    margin: 25px;
 
     input,
     textarea,
